--- a/examples/minimal/index.html
+++ b/examples/minimal/index.html
@@ -23,27 +23,27 @@
 
         <div>
           <label for="number">Card Number</label>
-          <input type="text" data-recurly="number" id="number" value="4111111111111111">
+          <input type="text" data-recurly="number" id="number">
         </div>
 
         <div class="date">
           <label for="month">Month</label>
-          <input type="text" data-recurly="month" id="month" maxlength="2" value="08">
+          <input type="text" data-recurly="month" id="month" maxlength="2">
         </div>
 
         <div class="date">
           <label for="year">Year</label>
-          <input type="text" data-recurly="year" id="year" maxlength="4" value="<?php echo date('Y', strtotime('+2 years')); ?>">
+          <input type="text" data-recurly="year" id="year" maxlength="4">
         </div>
 
         <div>
           <label for="first_name">First Name</label>
-          <input type="text" data-recurly="first_name" id="first_name" name="first-name" value="John">
+          <input type="text" data-recurly="first_name" id="first_name" name="first-name">
         </div>
 
         <div>
           <label for="last_name">Last Name</label>
-          <input type="text" data-recurly="last_name" id="last_name" name="last-name" value="Rambo">
+          <input type="text" data-recurly="last_name" id="last_name" name="last-name">
         </div>
 
         <button id="subscribe">Subscribe</button>
