Adds Ruby + Sinatra example application
Signed-off-by: Christopher Rogers <chrissrogers@gmail.com>

--- a/examples/minimal/index.html
+++ b/examples/minimal/index.html
@@ -19,7 +19,7 @@
     <section id="errors"></section>
 
     <section>
-      <form method="post" action="/api/new-subscription">
+      <form method="post" action="/path/to/api/script">
 
         <div>
           <label for="number">Card Number</label>
