--- a/examples/minimal/index.html
+++ b/examples/minimal/index.html
@@ -53,7 +53,6 @@
     </section>
   </body>
   <script>
-
     // Configure recurly.js
     recurly.configure('PUBLIC_KEY');
 
@@ -63,6 +62,7 @@
 
       // Reset the errors display
       $('#errors').text('');
+      $('input').removeClass('error');
 
       // Disable the submit button
       $('button').prop('disabled', true);
@@ -85,12 +85,14 @@
 
     // A simple error handling function to expose errors to the customer
     function error (err) {
-      $('#errors').text(err.message);
+      $('#errors').text('The following fields appear to be invalid: ' + err.fields.join(', '));
       $('button').prop('disabled', false);
+      $.each(err.fields, function (i, field) {
+        $('[data-recurly=' + field + ']').addClass('error');
+      });
     }
 
     // runs some simple animations for the page
-    $(function () { $('body').addClass('show'); });
-
+    $('body').addClass('show');
   </script>
 </html>
