Updates Node API example and payment form examples to render within the example application
Signed-off-by: Christopher Rogers <chrissrogers@gmail.com>

--- a/examples/minimal/index.html
+++ b/examples/minimal/index.html
@@ -19,8 +19,7 @@
     <section id="errors"></section>
 
     <section>
-      <form method="post" action="/path/to/api/script">
-
+      <form method="post" action="/api/subscriptions/new">
         <div>
           <label for="number">Card Number</label>
           <input type="text" data-recurly="number" id="number">
