--- a/examples/paypal/index.html
+++ b/examples/paypal/index.html
@@ -13,7 +13,7 @@
     <figure>$29/month</figure>
     <section id="errors" class="errors"></section>
     <section>
-      <form>
+      <form method="post" action="/api/subscriptions/new">
         <button id="subscribe">Subscribe with PayPal</button>
         <input type="hidden" id="recurly-token" name="recurly-token">
       </form>
