AddsAdds static serving to Ruby and Python examples
Signed-off-by: Christopher Rogers <chrissrogers@gmail.com>

--- a/examples/index.html
+++ b/examples/index.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     <ul>
-      <li><a href="minimal">Minimal billing information</a></li>
-      <li><a href="paypal">PayPal button</a></li>
+      <li><a href="minimal/index.html">Minimal billing information</a></li>
+      <li><a href="paypal/index.html">PayPal button</a></li>
     </ul>
   </body>
 </html>
