--- a/public/minimal/index.html
+++ b/public/minimal/index.html
@@ -4,8 +4,8 @@
     <title>Recurly.js Example: Minimal Billing Information</title>
     <script src="https://js.recurly.com/v3/recurly.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
-    <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <link href="/minimal/style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
@@ -57,6 +57,8 @@
 
     // On form submit, we stop submission to go get the token
     $('form').on('submit', function (event) {
+
+      // Prevent the form from submitting while we retrieve the token from Recurly
       event.preventDefault();
 
       // Reset the errors display
