--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
   </head>
   <body>
     <ul>
-      <li><a href="minimal/index.html">Minimal billing information</a></li>
-      <li><a href="paypal/index.html">PayPal button</a></li>
+      <li><a href="minimal">Minimal billing information</a></li>
+      <li><a href="advanced-pricing">Advanced pricing features</a></li>
+      <li><a href="paypal">PayPal button</a></li>
     </ul>
   </body>
 </html>
