--- a/public/advanced-pricing/index.html
+++ b/public/advanced-pricing/index.html
@@ -2,23 +2,19 @@
 <html>
   <head>
     <title>Recurly.js Example: Advanced Pricing</title>
-    <script src="/recurly.js"></script>
+    <script src="https://js.recurly.com/v3/recurly.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <link href="/js/favicon.png" rel="shortcut icon" type="image/png">
     <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <link href="/advanced-pricing/style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-      select, input { display: block; }
-      input[type=radio] { display: inline; }
-    </style>
   </head>
   <body>
-    <form>
+    <form method="post" action="/api/subscriptions/new">
       <label for="plan">Plan</label>
       <select id="plan" data-recurly="plan">
-        <option value="complexplan">Complex Plan</option>
         <option value="simpleplan" selected>Simple Plan</option>
+        <option value="complexplan">Complex Plan</option>
       </select>
 
       <label for="plan-quantity">Quantity</label>
