--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <ul>
       <li><a href="minimal">Minimal billing information</a></li>
       <li><a href="advanced-pricing">Advanced pricing features</a></li>
+      <li><a href="advanced-tax">Advanced tax features</a></li>
       <li><a href="paypal">PayPal button</a></li>
     </ul>
   </body>
