--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       <li><a href="minimal">Minimal billing information</a></li>
       <li><a href="advanced-pricing">Advanced pricing features</a></li>
       <li><a href="advanced-tax">Advanced tax features</a></li>
+      <li><a href="advanced-bank-account">Advanced bank account</a></li>
       <li><a href="paypal">PayPal button</a></li>
     </ul>
   </body>
