Adds token field to advanced bank account example
Signed-off-by: Christopher Rogers <chrissrogers@gmail.com>

--- a/public/advanced-bank-account/index.html
+++ b/public/advanced-bank-account/index.html
@@ -135,6 +135,8 @@
         </li>
       </ul>
       <div id="errors"></div>
+
+      <input type="hidden" data-recurly="token" name="recurly-token">
     </form>
     <script>
       // Configure recurly.js
