--- a/public/paypal/index.html
+++ b/public/paypal/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Recurly.js Example: Minimal Billing Information</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="/recurly.js"></script>
+    <script src="https://js.recurly.com/v4/recurly.js"></script>
     <link href="/js/favicon.png" rel="shortcut icon" type="image/png">
     <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <link href="/paypal/style.css" rel="stylesheet">
