Adds name attribute to advanced pricing example

--- a/public/advanced-pricing/index.html
+++ b/public/advanced-pricing/index.html
@@ -30,9 +30,9 @@
       <label for="year">Year</label>
       <div data-recurly="year" id="year"></div>
       <label for="first_name">First Name</label>
-      <input type="text" data-recurly="first_name" id="first_name">
+      <input type="text" data-recurly="first_name" id="first_name" name="first-name">
       <label for="last_name">Last Name</label>
-      <input type="text" data-recurly="last_name" id="last_name">
+      <input type="text" data-recurly="last_name" id="last_name" name="last-name">
 
       <label for="country">Country</label>
       <select id="country" data-recurly="country">
