Updates backends and frontends to accept backend recurly.js configuration
Signed-off-by: Christopher Rogers <chrissrogers@gmail.com>

--- a/public/advanced-bank-account/index.html
+++ b/public/advanced-bank-account/index.html
@@ -4,6 +4,7 @@
     <title>Recurly.js Example: Advanced Pricing</title>
     <script src="https://js.recurly.com/v4/recurly.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="/config.js"></script>
     <link href="/js/favicon.png" rel="shortcut icon" type="image/png">
     <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <style>
@@ -140,7 +141,7 @@
     </form>
     <script>
       // Configure recurly.js
-      recurly.configure('PUBLIC_KEY');
+      recurly.configure(window.recurlyConfig.publicKey); // Set this to your own public key
 
       // On form submit, we stop submission to go get the token
       $('form').on('submit', function (event) {
