--- a/public/apple-pay/index.html
+++ b/public/apple-pay/index.html
@@ -50,6 +50,15 @@
             fontSize: '1rem',
             fontWeight: 'bold',
             fontColor: '#2c0730'
+          },
+          number: {
+            placeholder: ''
+          },
+          month: {
+            placeholder: 'mm'
+          },
+          year: {
+            placeholder: 'yy'
           }
         }
       });
