Adds Apple Pay example
Signed-off-by: Christopher Rogers <chrissrogers@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       <li><a href="advanced-pricing">Advanced pricing features</a></li>
       <li><a href="advanced-tax">Advanced tax features</a></li>
       <li><a href="advanced-bank-account">Advanced bank account</a></li>
+      <li><a href="apple-pay">Apple Pay</a></li>
       <li><a href="paypal">PayPal button</a></li>
     </ul>
   </body>
