--- a/public/apple-pay/index.html
+++ b/public/apple-pay/index.html
@@ -7,6 +7,53 @@
     <script src="/config.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <link href="/minimal/style.css" rel="stylesheet">
+    <style type="text/css">
+      /* Apple Pay button styles */
+      @supports (-webkit-appearance: -apple-pay-button) {
+        .apple-pay-button {
+          display: inline-block;
+          -webkit-appearance: -apple-pay-button;
+        }
+        .apple-pay-button-black {
+          -apple-pay-button-style: black;
+        }
+        .apple-pay-button-white {
+          -apple-pay-button-style: white;
+        }
+
+        .apple-pay-button-white-with-line {
+          -apple-pay-button-style: white-outline;
+        }
+      }
+
+      @supports not (-webkit-appearance: -apple-pay-button) {
+        .apple-pay-button {
+          display: inline-block;
+          background-size: 100% 60%;
+          background-repeat: no-repeat;
+          background-position: 50% 50%;
+          border-radius: 5px;
+          padding: 0px;
+          box-sizing: border-box;
+          min-width: 200px;
+          min-height: 32px;
+          max-height: 64px;
+        }
+        .apple-pay-button-black {
+          background-image: -webkit-named-image(apple-pay-logo-white);
+          background-color: black;
+        }
+        .apple-pay-button-white {
+          background-image: -webkit-named-image(apple-pay-logo-black);
+          background-color: white;
+        }
+        .apple-pay-button-white-with-line {
+          background-image: -webkit-named-image(apple-pay-logo-black);
+          background-color: white;
+          border: .5px solid black;
+        }
+      }
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
@@ -21,102 +68,52 @@
 
     <section>
       <form method="post" action="/api/subscriptions/new">
-        <div>
-          <div data-recurly="card" id="number"></div>
-        </div>
-
-        <div>
-          <label for="first_name">First Name</label>
-          <input type="text" data-recurly="first_name" id="first_name" name="first-name">
-        </div>
-
-        <div>
-          <label for="last_name">Last Name</label>
-          <input type="text" data-recurly="last_name" id="last_name" name="last-name">
-        </div>
-
-        <button id="subscribe">Subscribe</button>
-
+        <div id="apple-pay" class="apple-pay-button apple-pay-button-white"></div>
         <input type="hidden" data-recurly="token" name="recurly-token">
       </form>
     </section>
     <script>
       // Configure recurly.js
-      recurly.configure({
-        publicKey: window.recurlyConfig.publicKey, // Set this to your own public key
-        style: {
-          all: {
-            fontFamily: 'Open Sans',
-            fontSize: '1rem',
-            fontWeight: 'bold',
-            fontColor: '#2c0730'
-          },
-          number: {
-            placeholder: ''
-          },
-          month: {
-            placeholder: 'mm'
-          },
-          year: {
-            placeholder: 'yy'
-          }
+      recurly.configure(window.recurlyConfig.publicKey); // Set this to your own public key
+
+      recurly.ready(function () {
+        // Check if the device is compatible with Apple Pay
+        if (!window.ApplePaySession) {
+          $('#errors').text('Your device or browser is not compatible with Apple Pay');
+          return;
         }
-      });
 
-      // When a customer hits their 'enter' key while in a field
-      recurly.on('field:submit', function (event) {
-        $('form').submit();
-      });
+        var applePay = recurly.ApplePay({
+          country: 'US',
+          currency: 'USD',
+          label: "Apple pay via recurly",
+          total: '10'
+        });
 
-      // On form submit, we stop submission to go get the token
-      $('form').on('submit', function (event) {
+        applePay.ready(function () {
+          var button = document.querySelector('#apple-pay')
 
-        // Prevent the form from submitting while we retrieve the token from Recurly
-        event.preventDefault();
+          button.addEventListener('click', initListener);
+          button.addEventListener('touch', initListener);
 
-        // Reset the errors display
-        $('#errors').text('');
-        $('input').removeClass('error');
+          function initListener () {
+            // Reset the errors display
+            $('#errors').text('');
+            applePay.begin();
+          }
+        });
 
-        // Disable the submit button
-        $('button').prop('disabled', true);
+        applePay.on('error', function (err) {
+          console.error('Apple Pay error', err);
+        });
 
-        var form = this;
-
-        // Now we call recurly.token with the form. It goes to Recurly servers
-        // to tokenize the credit card information, then injects the token into the
-        // data-recurly="token" field above
-        recurly.token(form, function (err, token) {
-
+        applePay.on('token', function (token) {
           // send any errors to the error function below
           if (err) error(err);
-
           // Otherwise we continue with the form submission
-          else form.submit();
-
+          else document.querySelector('form').submit();
         });
       });
-
-      // Reconfigure font size based on window size
-      $(window).on('resize init', function (event) {
-        if ($(this).width() < 600) {
-          recurly.configure({
-            style: {
-              all: {
-                fontSize: '0.9rem'
-              }
-            }
-          });
-        } else {
-          recurly.configure({
-            style: {
-              all: {
-                fontSize: '1rem'
-              }
-            }
-          });
-        }
-      }).triggerHandler('init');
 
       // A simple error handling function to expose errors to the customer
       function error (err) {
