--- a/public/advanced-tax/index.html
+++ b/public/advanced-tax/index.html
@@ -6,6 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="/config.js"></script>
     <link href="/js/favicon.png" rel="shortcut icon" type="image/png">
+    <link href="https://js.recurly.com/v4/recurly.css" rel="stylesheet" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <style>
       select, input { display: block; }
