Adds CVV to advanced pricing example
Signed-off-by: Christopher Rogers <chrissrogers@gmail.com>

--- a/public/advanced-pricing/index.html
+++ b/public/advanced-pricing/index.html
@@ -31,6 +31,8 @@
       <div data-recurly="month" id="month"></div>
       <label for="year">Year</label>
       <div data-recurly="year" id="year"></div>
+      <label for="cvv">CVV</label>
+      <div data-recurly="cvv" id="cvv"></div>
       <label for="first_name">First Name</label>
       <input type="text" data-recurly="first_name" id="first_name" name="first-name">
       <label for="last_name">Last Name</label>
@@ -127,7 +129,7 @@
             fontColor: '#2c0730'
           },
           number: {
-            placeholder: ''
+            placeholder: 'Card number'
           },
           month: {
             placeholder: 'mm'
