Updated advanced pricing example for chackout tax display
Signed-off-by: Christopher Rogers <chrissrogers@gmail.com>

--- a/public/advanced-pricing/index.html
+++ b/public/advanced-pricing/index.html
@@ -76,7 +76,7 @@
         <li>
           Tax:
           <span data-recurly="currency_symbol"></span>
-          <span data-recurly="tax_now"></span>
+          <span data-recurly="taxes_now"></span>
         </li>
         <li>----</li>
         <li>
@@ -102,7 +102,7 @@
         <li>
           Tax:
           <span data-recurly="currency_symbol"></span>
-          <span data-recurly="tax_next"></span>
+          <span data-recurly="taxes_next"></span>
         </li>
         <li>----</li>
         <li>
