Removes extraneous id
Signed-off-by: Christopher Rogers <chrissrogers@gmail.com>

--- a/public/minimal/index.html
+++ b/public/minimal/index.html
@@ -23,7 +23,7 @@
     <section>
       <form method="post" action="/api/subscriptions/new">
         <div>
-          <div data-recurly="card" id="number"></div>
+          <div data-recurly="card"></div>
         </div>
 
         <div>
