Adds examples for fraud managment
Signed-off-by: Christopher Rogers <chrissrogers@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
       <li><a href="advanced-tax">Advanced tax features</a></li>
       <li><a href="advanced-bank-account">Advanced bank account</a></li>
       <li><a href="apple-pay">Apple Pay</a></li>
-      <li><a href="paypal">PayPal button</a></li>
+      <li><a href="paypal">PayPal</a></li>
+      <li><a href="fraud-detection/recurly-kount">Fraud detection (Recurly and Kount direct integrations)</a></li>
+      <li><a href="fraud-detection/braintree.html">Fraud detection (Braintree integration)</a></li>
     </ul>
   </body>
 </html>
