--- a/public/advanced-bank-account/index.html
+++ b/public/advanced-bank-account/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Recurly.js Example: Advanced Pricing</title>
-    <script src="https://js.recurly.com/v4/recurly.js"></script>
+    <script src="https://js.lvh.me:8020/build/recurly.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="/config.js"></script>
     <link href="/js/favicon.png" rel="shortcut icon" type="image/png">
@@ -142,7 +142,7 @@
     </form>
     <script>
       // Configure recurly.js
-      recurly.configure(window.recurlyConfig.publicKey); // Set this to your own public key
+      recurly.configure({api: "https://api.lvh.me:3000/js/v1", publicKey: "dev-LvCTlJaL5bKTD6pEtar7Bx"}); // Set this to your own public key
 
       // On form submit, we stop submission to go get the token
       $('form').on('submit', function (event) {
