--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
   </head>
   <body>
     <ul>
-      <li><a href="minimal">Minimal billing information</a></li>
-      <li><a href="advanced-pricing">Advanced pricing features</a></li>
-      <li><a href="advanced-tax">Advanced tax features</a></li>
-      <li><a href="advanced-bank-account">Advanced bank account</a></li>
-      <li><a href="apple-pay">Apple Pay</a></li>
-      <li><a href="paypal">PayPal</a></li>
-      <li><a href="fraud-detection/recurly-kount">Fraud detection (Recurly and Kount direct integrations)</a></li>
+      <li><a href="minimal/index.html">Minimal billing information</a></li>
+      <li><a href="advanced-pricing/index.html">Advanced pricing features</a></li>
+      <li><a href="advanced-tax/index.html">Advanced tax features</a></li>
+      <li><a href="advanced-bank-account/index.html">Advanced bank account</a></li>
+      <li><a href="apple-pay/index.html">Apple Pay</a></li>
+      <li><a href="paypal/index.html">PayPal</a></li>
+      <li><a href="fraud-detection/recurly-kount.html">Fraud detection (Recurly and Kount direct integrations)</a></li>
       <li><a href="fraud-detection/braintree.html">Fraud detection (Braintree integration)</a></li>
     </ul>
   </body>
