--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
       <li><a href="paypal/index.html">PayPal</a></li>
       <li><a href="fraud-detection/recurly-kount.html">Fraud detection (Recurly and Kount direct integrations)</a></li>
       <li><a href="fraud-detection/braintree.html">Fraud detection (Braintree integration)</a></li>
+      <li><a href="3d-secure/index.html">3-D Secure</a></li>
     </ul>
   </body>
 </html>
